fixed z-index for dropdown menu

--- a/mootiro_komoo/static/css/fashion.css
+++ b/mootiro_komoo/static/css/fashion.css
@@ -144,7 +144,8 @@
     position: absolute;
     left: 0;
     top: 100%;
-    width: 100%; }
+    width: 100%;
+    z-index: 100; }
     .dropdown_menu > ul > li {
       width: 100%; }
 
