--- a/mootiro_komoo/static/css/partials/_newtop.scss
+++ b/mootiro_komoo/static/css/partials/_newtop.scss
@@ -141,6 +141,7 @@
         left: 0;
         top: 100%;
         width: 100%;
+        z-index: 100;
 
         > li { width: 100% }
     }
